feat: improve openapi spec + proxy gutendex
